--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,13 @@
-:root {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+@import 'base';
+
+.window {
+  height: 100vh;
+}
+
+.list {
+
+}
+
+.list-item {
+  padding: 10px;
 }
